--- a/config/database.yml
+++ b/config/database.yml
@@ -3,21 +3,14 @@ default: &default
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password: <%= ENV.fetch("MYSQL_ROOT_PASSWORD") %>
+  password: 
 
 development:
   <<: *default
-  database: rails6_mysql_development
-  host: <%= ENV['MYSQL_ADDRESS'] %>
+  database: holinet
+  host: localhost
 
 test:
   <<: *default
   database: rails6_mysql_test
   host: <%= ENV['MYSQL_ADDRESS'] %>
-
-production:
-  <<: *default
-  database: <%= ENV['MYSQL_DATABASE'] %>
-  username: <%= ENV['MYSQL_USERNAME'] %>
-  password: <%= ENV['MYSQL_PASSWORD'] %>
-  host: <%= ENV['MYSQL_ADDRESS'] || ENV['MYSQL_HOST'] %>
