--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,10 @@
 version: '3.1'
 
 services:
-
-  db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
-    restart: always
-    ports:
-      - "13306:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-
   web:
     build: .
     ports:
       - "3000:3000"
-    links:
-      - db
+    network_mode: host
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_ADDRESS: db
       RAILS_ENV: development
