--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   web:
-    build: .
+    image: fernando93d/holinet
     restart: always
     ports:
       - "3000:3000"
